--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4vbeiurx5i8VjYzn-muTWLtKu23IfljQ&libraries=places"
     defer=""></script>
+
+  <script type="module" src="main.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-  <script type="module" src="main.js" defer></script>
 </head>
 
 <body class="font-outfit flex flex-col">
-  <header class="fixed w-full h-64">
+  <header class="fixed bg-white w-full z-10">
     <div class="hidden md:flex items-center justify-between px-6 h-12 bg-emerald-800">
       <div class="flex items-center">
         <span class="p-1">
@@ -37,7 +38,7 @@
         <p class="opacity-50">العربیہ</p>
       </div>
     </div>
-    <nav class="w-full shadow-md">
+    <nav class="w-full h-36 shadow-md">
       <div class="flex items-center justify-between border-gray-200 py-2 px-12">
         <div class="flex gap-4">
           <span class="flex gap-1 items-end">
@@ -137,9 +138,45 @@
       </div>
     </nav>
   </header>
-  <div class="h-screen">
+  <div class="h-48 "></div>
+  <section class="bg-white">
+    <div class="grid lg:gap-8 lg:grid-cols-12 xl:gap-0 relative">
+      <!-- <img src="assets/icons/background-building.png" class="absolute z-0 place-self-center bottom-0 "> -->
+      <!-- style="background-image: url('./assets/icons/background-building.png')" -->
+      <div class="place-self-center lg:col-span-7 ">
+        <h1 class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl">
+          Get The Best Deals <br>Near By You.
+        </h1>
+        <p class="max-w-2xl mb-6 font-light  lg:mb-8 md:text-lg lg:text-xl ">
+          Explore nearby deals on map and buy deals to <br> enjoy quality food with your family
+        </p>
+        <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
+          <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+        </div>
 
-  </div>
+      </div>
+      <div class="lg:mt-0 lg:col-span-5 lg:flex bg-gray-500">
+        <video width="100%" height="240" autoplay muted>
+          <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+            type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+  </section>
+  <section class="bg-white">
+    <div class="max-w-screen-xl px-4 pb-8 mx-auto lg:pb-16">
+      <div class="grid grid-cols-2 gap-8 text-gray-500 sm:gap-12 sm:grid-cols-3 lg:grid-cols-6 dark:text-gray-400">
+        <div>1</div>
+        <div>1</div>
+        <div>1</div>
+        <div>1</div>
+        <div>1</div>
+        <div>1</div>
+        <div>1</div>
+      </div>
+    </div>
+  </section>
   <div class="p-4">
     <div id="map"></div>
   </div>
