--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
       <!-- style="background-image: url('./assets/icons/background-building.png')" -->
       <div class="place-self-center lg:col-span-7 ">
         <h1 class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl">
-          Get The Best Deals <br>Near By You.
+          Get The Best
+          <span class="text-emerald-600 inline-block">
+            Deals
+            <img src="./assets/icons/Underline.svg" />
+          </span> <br>Near By You.
         </h1>
         <p class="max-w-2xl mb-6 font-light  lg:mb-8 md:text-lg lg:text-xl ">
           Explore nearby deals on map and buy deals to <br> enjoy quality food with your family
@@ -157,8 +161,8 @@
       </div>
       <div class="lg:mt-0 lg:col-span-5 lg:flex bg-gray-500">
         <video width="100%" height="240" autoplay muted>
-          <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-            type="video/mp4">
+          <!-- <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+            type="video/mp4"> -->
           Your browser does not support the video tag.
         </video>
       </div>
@@ -166,14 +170,128 @@
   </section>
   <section class="bg-white">
     <div class="max-w-screen-xl px-4 pb-8 mx-auto lg:pb-16">
-      <div class="grid grid-cols-2 gap-8 text-gray-500 sm:gap-12 sm:grid-cols-3 lg:grid-cols-6 dark:text-gray-400">
-        <div>1</div>
-        <div>1</div>
-        <div>1</div>
-        <div>1</div>
-        <div>1</div>
-        <div>1</div>
-        <div>1</div>
+      <div class="grid grid-cols-2 gap-8  sm:gap-12 sm:grid-cols-3 lg:grid-cols-6 border-b">
+        <div class="my-2 flex flex-col items-center">
+          <img src="./assets/icons/service_1.png" />
+          <span class="mt-2">Dinning</span>
+        </div>
+        <div class="mt-2 flex flex-col items-center">
+          <img src="./assets/icons/service_2.png" />
+          <span class="mt-2">Saloon/Spa</span>
+        </div>
+        <div class="mt-2 flex flex-col items-center">
+          <img src="./assets/icons/service_3.png" />
+          <span class="mt-2">Entertainment</span>
+        </div>
+        <div class="mt-2 flex flex-col items-center">
+          <img src="./assets/icons/service_4.png" />
+          <span class="mt-2">Cleaning</span>
+        </div>
+        <div class="mt-2 flex flex-col items-center">
+          <img src="./assets/icons/service_1.png" />
+          <span class="mt-2">Dinning</span>
+        </div>
+        <div class="mt-2 flex flex-col items-center">
+          <img src="./assets/icons/service_2.png" />
+          <span class="mt-2">Saloon/Spa</span>
+        </div>
+      </div>
+      <div class="flex items-end justify-between">
+        <div class="flex   px-2 m-4 border-r">
+          <div class="flex items-center">
+            <img src="./assets/icons/Discount.svg" class="m-4" />
+          </div>
+          <div class="w-64">
+            <p class="font-bold text-xl">Amazing Last Minute Discounts</p>
+            <p class="text-gray-400">Get Amazing Last Minute Discounts on your favorite categories food, of beauty,
+              getaways &
+              more.</p>
+          </div>
+        </div>
+        <div class="flex   px-2 m-4 ">
+          <div class="flex items-center">
+            <img src="./assets/icons/Save.svg" class="m-4" />
+          </div>
+          <div class="w-64">
+            <p class="font-bold text-xl">Save</p>
+            <p class="text-gray-400">Save Money with our deals of & offers</p>
+          </div>
+        </div>
+        <div class="flex   px-2 m-4 border-l">
+          <div class="flex items-center">
+            <img src="./assets/icons/Payment.svg" class="m-4" />
+          </div>
+          <div class="w-64">
+            <p class="font-bold text-xl">Secure Payments</p>
+            <p class="text-gray-400">The Secure payment methods throughout the checkout process of to keep your data
+              secure & safe.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-white ">
+    <div class="max-w-screen-xl px-4 pb-8 mx-auto lg:pb-16">
+      <div class=" flex items-center justify-between">
+        <div class="w-full">
+          <h1 class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight ">
+            Nearby
+            <span class="text-emerald-600 inline-block">
+              Deals
+              <img src="./assets/icons/Underline.svg" class="" />
+            </span>
+          </h1>
+          <p>Explore nearby deals on map and buy deals to enjoy quality food with your family</p>
+        </div>
+        <div>
+          <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+        </div>
+      </div>
+      <div class="flex">
+        <div class="">
+          <div class="relative">
+            <img src="./assets/icons/Food_1.png" alt="">
+            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+              <img src="./assets/icons/Heart.svg" alt="" class="">
+            </span>
+          </div>
+          <div class="my-2 px-4">
+            <div class="flex items-center justify-between">
+              <span class=" ">
+                <img src="./assets/icons/Stars.svg" alt="">
+              </span>
+              <span class="flex ">
+                <img src="./assets/icons/Percent.svg" alt="" class="px-2">
+                <p>Flate 15% off</p>
+              </span>
+            </div>
+            <div class="mt-4">
+              <h1 class="text-2xl font-extrabold leading-none tracking-tight ">Loaded Fries AT Aloo Cart</h1>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex items-center justify-between mt-12">
+                <div class="flex items-center justify-center">
+                  <img src="./assets/icons/Uer_1.png" alt="" class="mr-4">
+                  <p class="font-semibold">
+                    Aloo Cart
+                  </p>
+                </div>
+                <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
