Desktop Design finalize almost

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hashed System Assesment</title>
 
-  <!-- <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/3.7.0/mapbox-gl.js"
@@ -15,7 +15,7 @@
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4vbeiurx5i8VjYzn-muTWLtKu23IfljQ&libraries=places"
-    defer=""></script> -->
+    defer=""></script>
 
 
   <script type="module" src="main.js" defer></script>
@@ -161,18 +161,18 @@
         </div>
 
       </div>
-      <div class="lg:mt-0 lg:col-span-5 lg:flex bg-gray-500">
+      <div class="lg:mt-0 lg:col-span-5 lg:flex bg-gray-200">
         <video width="100%" height="240" autoplay muted>
-          <!-- <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-            type="video/mp4"> -->
+          <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+            type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
     </div>
   </section>
   <section class="bg-white">
-    <div class="max-w-screen-xl px-4 pb-8 mx-auto lg:pb-16">
-      <div class="grid grid-cols-2 gap-8  sm:gap-12 sm:grid-cols-3 lg:grid-cols-6 border-b">
+    <div class="max-w-screen-xl px-4 pb-8 mt-48 mx-auto  lg:pb-16">
+      <div class="grid grid-cols-2 gap-8 pb-12 sm:gap-12 sm:grid-cols-3 lg:grid-cols-6 border-b">
         <div class="my-2 flex flex-col items-center">
           <img src="./assets/icons/service_1.png" />
           <span class="mt-2">Dinning</span>
@@ -233,9 +233,9 @@
     </div>
   </section>
   <section class="bg-white ">
-    <div class="max-w-screen-xl px-4 pb-8 mx-auto lg:pb-16">
+    <div class="max-w-screen-xl px-4 pb-8 mx-auto mt-16 lg:pb-16">
       <div class=" flex items-center justify-between">
-        <div class="w-full">
+        <div class="">
           <h1 class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight ">
             Nearby
             <span class="text-emerald-600 w-24 inline-block">
@@ -243,14 +243,255 @@
               <img src="./assets/icons/Underline_sm.svg" class="" />
             </span>
           </h1>
-          <p>Explore nearby deals on map and buy deals to enjoy quality food with your family</p>
+          <p class="w-full">Explore nearby deals on map and buy deals to enjoy quality food with your family</p>
         </div>
         <div>
-          <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+          <button class="bg-emerald-800 px-6 py-2  w-fit rounded-full text-white font-medium">View on Map</button>
         </div>
       </div>
-      <div class="flex">
+      <div class="flex mt-16 gap-4">
         <div class="">
+          <div class="relative">
+            <img src="./assets/icons/Food_1.png" alt="">
+            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+              <img src="./assets/icons/Heart.svg" alt="" class="">
+            </span>
+          </div>
+          <div class="my-2 px-4">
+            <div class="flex items-center justify-between">
+              <span class=" ">
+                <img src="./assets/icons/Stars.svg" alt="">
+              </span>
+              <span class="flex ">
+                <img src="./assets/icons/Percent.svg" alt="" class="px-2">
+                <p>Flate 15% off</p>
+              </span>
+            </div>
+            <div class="mt-4">
+              <h1 class="text-2xl font-extrabold leading-none tracking-tight ">Loaded Fries AT Aloo Cart</h1>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex items-center justify-between mt-12">
+                <div class="flex items-center justify-center">
+                  <img src="./assets/icons/Uer_1.png" alt="" class="mr-4">
+                  <p class="font-semibold">
+                    Aloo Cart
+                  </p>
+                </div>
+                <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="">
+          <div class="relative">
+            <img src="./assets/icons/Food_1.png" alt="">
+            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+              <img src="./assets/icons/Heart.svg" alt="" class="">
+            </span>
+          </div>
+          <div class="my-2 px-4">
+            <div class="flex items-center justify-between">
+              <span class=" ">
+                <img src="./assets/icons/Stars.svg" alt="">
+              </span>
+              <span class="flex ">
+                <img src="./assets/icons/Percent.svg" alt="" class="px-2">
+                <p>Flate 15% off</p>
+              </span>
+            </div>
+            <div class="mt-4">
+              <h1 class="text-2xl font-extrabold leading-none tracking-tight ">Loaded Fries AT Aloo Cart</h1>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex items-center justify-between mt-12">
+                <div class="flex items-center justify-center">
+                  <img src="./assets/icons/Uer_1.png" alt="" class="mr-4">
+                  <p class="font-semibold">
+                    Aloo Cart
+                  </p>
+                </div>
+                <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="">
+          <div class="relative">
+            <img src="./assets/icons/Food_1.png" alt="">
+            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+              <img src="./assets/icons/Heart.svg" alt="" class="">
+            </span>
+          </div>
+          <div class="my-2 px-4">
+            <div class="flex items-center justify-between">
+              <span class=" ">
+                <img src="./assets/icons/Stars.svg" alt="">
+              </span>
+              <span class="flex ">
+                <img src="./assets/icons/Percent.svg" alt="" class="px-2">
+                <p>Flate 15% off</p>
+              </span>
+            </div>
+            <div class="mt-4">
+              <h1 class="text-2xl font-extrabold leading-none tracking-tight ">Loaded Fries AT Aloo Cart</h1>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex items-center justify-between mt-12">
+                <div class="flex items-center justify-center">
+                  <img src="./assets/icons/Uer_1.png" alt="" class="mr-4">
+                  <p class="font-semibold">
+                    Aloo Cart
+                  </p>
+                </div>
+                <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-orange-100 ">
+    <div class="max-w-screen-xl px-4 pb-8 mx-auto mt-16 lg:pb-16">
+      <div class=" flex items-center justify-between">
+        <div class="">
+          <h1 class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight ">
+            Nearby
+            <span class="text-emerald-600 w-24 inline-block">
+              Deals
+              <img src="./assets/icons/Underline_sm.svg" class="" />
+            </span>
+          </h1>
+          <p class="w-full">Explore nearby deals on map and buy deals to enjoy quality food with your family</p>
+        </div>
+        <div>
+          <button class="bg-emerald-800 px-6 py-2  w-fit rounded-full text-white font-medium">View on Map</button>
+        </div>
+      </div>
+      <div class="flex mt-16 gap-4">
+        <div class="bg-white rounded-3xl pb-4">
+          <div class="relative">
+            <img src="./assets/icons/Food_1.png" alt="">
+            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+              <img src="./assets/icons/Heart.svg" alt="" class="">
+            </span>
+          </div>
+          <div class="my-2 px-4">
+            <div class="flex items-center justify-between">
+              <span class=" ">
+                <img src="./assets/icons/Stars.svg" alt="">
+              </span>
+              <span class="flex ">
+                <img src="./assets/icons/Percent.svg" alt="" class="px-2">
+                <p>Flate 15% off</p>
+              </span>
+            </div>
+            <div class="mt-4">
+              <h1 class="text-2xl font-extrabold leading-none tracking-tight ">Loaded Fries AT Aloo Cart</h1>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex items-center justify-between mt-12">
+                <div class="flex items-center justify-center">
+                  <img src="./assets/icons/Uer_1.png" alt="" class="mr-4">
+                  <p class="font-semibold">
+                    Aloo Cart
+                  </p>
+                </div>
+                <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bg-white rounded-3xl pb-4">
+          <div class="relative">
+            <img src="./assets/icons/Food_1.png" alt="">
+            <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
+              <img src="./assets/icons/Heart.svg" alt="" class="">
+            </span>
+          </div>
+          <div class="my-2 px-4">
+            <div class="flex items-center justify-between">
+              <span class=" ">
+                <img src="./assets/icons/Stars.svg" alt="">
+              </span>
+              <span class="flex ">
+                <img src="./assets/icons/Percent.svg" alt="" class="px-2">
+                <p>Flate 15% off</p>
+              </span>
+            </div>
+            <div class="mt-4">
+              <h1 class="text-2xl font-extrabold leading-none tracking-tight ">Loaded Fries AT Aloo Cart</h1>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex mt-3">
+                <span>
+                  <img src="./assets/icons/Location.svg" alt="">
+                </span>
+                <p class="text-gray-500 pl-2">Pakistan, Lahore</p>
+              </div>
+              <div class="flex items-center justify-between mt-12">
+                <div class="flex items-center justify-center">
+                  <img src="./assets/icons/Uer_1.png" alt="" class="mr-4">
+                  <p class="font-semibold">
+                    Aloo Cart
+                  </p>
+                </div>
+                <button class="bg-emerald-800 px-6 py-2 rounded-full text-white font-medium">Explore</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bg-white rounded-3xl pb-4">
           <div class="relative">
             <img src="./assets/icons/Food_1.png" alt="">
             <span class="bg-white rounded-full p-2 absolute right-4 top-4 shadow-md cursor-pointer">
@@ -331,17 +572,43 @@
     </div>
     <img src="assets/icons/D_background.svg" alt="" class="absolute text-black right-0 bottom-0">
   </section>
-  <div class="p-4 bg-slate-400">
+  <div class=" bg-slate-400">
     <div id="map"></div>
   </div>
   <footer>
-    <div class="flex justify-around">
-      <div>
+    <div class="flex justify-around my-20">
+      <div class="flex gap-8 items-start">
         <img src="./assets/icons/Vector.svg" alt="Brand Logo" />
-        <h1></h1>
+        <div class="flex flex-col gap-4">
+          <h1 class="text-2xl font-medium">Top Deals</h1>
+          <p class="w-72">
+            Top Deals is an e-commerce site that connects businesses with customers by providing discounted offers,
+            service coupons, or special offers. Top Deals brings a whole ecommerce platform for business owners and
+            customers to save a lot of money.
+          </p>
+        </div>
       </div>
-      <div></div>
-      <div></div>
+      <div class="flex flex-col gap-4">
+        <h1 class="text-2xl font-medium">Our Company</h1>
+        <ul>
+          <li class="mt-2">About Us</li>
+          <li class="mt-2">Privacy & Policy</li>
+          <li class="mt-2">Contact Us</li>
+          <li class="mt-2">FAQs</li>
+          <li class="mt-2">Terms & Conditions</li>
+        </ul>
+      </div>
+      <div>
+        <h1 class="text-2xl font-medium">Our Paymet Parteners</h1>
+        <img src="./assets/icons/Group 1000004841.png" alt="" class="mt-4">
+      </div>
+
+    </div>
+    <div class="mx-auto w-10/12 ">
+      <div class="flex items-center justify-between h-16">
+        <span>© deelly 2023 . All rights reserved.</span>
+        <img src="./assets/icons/Frame 1000001855.png" alt="">
+      </div>
     </div>
   </footer>
 </body>
