--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </nav>
   </header>
   <div class="h-48 "></div>
-  <section class="bg-white">
+  <section id="hero-section" class="bg-white">
     <div class="grid lg:gap-8 lg:grid-cols-12 xl:gap-0 relative">
       <!-- <img src="assets/icons/background-building.png" class="absolute z-0 place-self-center bottom-0 "> -->
       <!-- style="background-image: url('./assets/icons/background-building.png')" -->
@@ -170,7 +170,53 @@
       </div>
     </div>
   </section>
-  <section class="bg-white">
+  <section id="services-section" class="bg-white relative">
+    <div class="shadow-lg p-8 bg-white rounded-md  w-10/12 absolute m-auto left-0 right-0 transform translate-y-[-50%]">
+      <div class="flex gap-4 my-4">
+        <div class="flex gap-2 w-full items-center justify-between border h-full py-2 px-2 rounded-lg">
+          <p class="opacity-80">
+            Dinning
+          </p>
+          <img src="./assets/icons/Down_Arrow.svg" alt="Arrow" />
+        </div>
+        <div class="flex gap-2 w-full items-center justify-between border h-full py-2 px-2 rounded-lg">
+          <p class="opacity-80">
+            Select All
+          </p>
+          <img src="./assets/icons/Down_Arrow.svg" alt="Arrow" />
+        </div>
+        <div class="flex gap-2 w-full items-center justify-between border h-full py-2 px-2 rounded-lg">
+          <p class="opacity-80">
+            Select Sub Category
+          </p>
+          <img src="./assets/icons/Down_Arrow.svg" alt="Arrow" />
+        </div>
+      </div>
+      <div class="flex gap-4">
+        <div class="flex gap-2 w-96 items-center justify-between border h-full py-2 px-2 rounded-lg">
+          <p class="opacity-80">
+            Lahore
+          </p>
+          <img src="./assets/icons/Down_Arrow.svg" alt="Arrow" />
+        </div>
+        <div class="flex gap-2 w-96 items-center justify-between border h-full py-2 px-2 rounded-lg">
+          <p class="opacity-80">
+            Destination
+          </p>
+          <img src="./assets/icons/Down_Arrow.svg" alt="Arrow" />
+        </div>
+        <div class="flex gap-2 grow items-center justify-start border h-full py-2 px-2 rounded-lg">
+          <span id="search-icon">
+            <img src="./assets/icons/Search_Icon.svg" alt="Search" />
+          </span>
+          <p class="opacity-80">
+            Search...
+          </p>
+        </div>
+        <button class="bg-emerald-800 px-6 py-2  w-fit rounded-full text-white font-medium">View on Map</button>
+
+      </div>
+    </div>
     <div class="max-w-screen-xl px-4 pb-8 mt-48 mx-auto  lg:pb-16">
       <div class="grid grid-cols-2 gap-8 pb-12 sm:gap-12 sm:grid-cols-3 lg:grid-cols-6 border-b">
         <div class="my-2 flex flex-col items-center">
