--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
         </div>
 
       </div>
-      <div class="lg:mt-0 lg:col-span-5 lg:flex bg-gray-200">
+      <div class="lg:mt-0 lg:col-span-5 lg:flex bg-gray-200 relative">
+        <img src="./assets/icons/play.png" alt=""
+          class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
         <video width="100%" height="240" autoplay muted>
           <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
             type="video/mp4">
@@ -608,6 +610,34 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="border-t bg-white">
+    <div id="counter-section" class="flex justify-evenly  my-8">
+      <div class="p-1">
+        <h1 id="deals-counter" till="75000" class="counter text-2xl font-bold">0</h1>
+        <center>
+          <p>Deals</p>
+        </center>
+      </div>
+      <div class="p-1">
+        <h1 id="retailers-counter" till="6000" class="counter text-2xl font-bold">0</h1>
+        <center>
+          <p>Retailers</p>
+        </center>
+      </div>
+      <div class="p-1">
+        <h1 id="deals-counter" class="text-2xl font-bold">2 Million</h1>
+        <center>
+          <p>Active Users</p>
+        </center>
+      </div>
+      <div class="p-1">
+        <h1 id="deals-counter" class="text-2xl font-bold">1.3 Million</h1>
+        <center>
+          <p>App Downloads</p>
+        </center>
       </div>
     </div>
   </section>
